--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
         tools:targetApi="31">
         <activity
-            android:name=".PlayerScreen"
+            android:name=".PlayerActivity"
             android:exported="false" />
         <activity
             android:name=".SettingsActivity"
